recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:3: error: not found: value step
  if (step==0) {
      ^Spiral:7: error: not found: value step
  else { spiral(step-1, angle,length,increment+increment);
                ^